# VFXCollection

./: .gitignore  BezierCurve.cpp  BezierCurve.hpp  BezierCurve.py  CMakeLists.txt  Demo.cpp  Demo.hpp  Point.cpp  Point.hpp  Point.py  README.md  requirements.txt
.github/workflows/: cmake.yml
BezierCurve/: BezierCurve.cpp  BezierCurve.hpp  BezierCurve.py
C++/: BezierCurve.cpp  BezierCurve.hpp  CMakeLists.txt  Demo.cpp  Demo.hpp  Point.cpp  Point.hpp
Demo/: Demo.py
Python/: BezierCurve.py  Demo.py  Particle.py  ParticleGenerator.py  Point.py
tests/: test_point.py
